installed debug and added a bin directory

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.14.2",
     "cookie-parser": "^1.4.1",
     "cookie-session": "^1.2.0",
+    "debug": "^2.2.0",
     "dotenv": "^1.2.0",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
