--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.6.1",
     "nightmare": "^2.1.2",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.0.0",
     "path": "^0.12.7",
     "pg": "^4.4.3",
     "serve-favicon": "^2.3.0",
