--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "fs": "0.0.2",
+    "knex": "^0.9.0",
     "nightmare": "^2.1.2",
+    "pg": "^4.4.3",
     "vo": "^1.0.3"
   }
 }
