--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/walzerm/hikeWeatherApp#readme",
   "dependencies": {
+    "async": "^1.5.2",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.2",
     "cookie-parser": "^1.4.1",
@@ -36,6 +37,7 @@
     "path": "^0.12.7",
     "pg": "^4.4.3",
     "serve-favicon": "^2.3.0",
+    "sync": "^0.2.5",
     "vo": "^1.0.3"
   }
 }
