--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport-facebook": "^2.0.0",
     "path": "^0.12.7",
     "pg": "^4.4.3",
+    "request": "^2.67.0",
     "serve-favicon": "^2.3.0",
     "vo": "^1.0.3"
   }
